--- a/Analog clock.html
+++ b/Analog clock.html
@@ -221,6 +221,7 @@ function tick() {
 setInterval(tick, 100);
 
 </script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 
 
 </body>
